--- a/cadastro.html
+++ b/cadastro.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="titulo">
-        <h1>Sempre lembre de sua senha e nome.</h1>
+        <h1>---> Sempre lembre de sua senha e nome. Coloque qualquer Usuario que você lembre. Não irá funcionar se cadastrar o mesmo nome várias vezes.</h1>
     </div>
 
     <div class="sistema">
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <p>Sistema em Beta. 2023</p>
+    <p>Sistema em Beta 1.0. 2023</p>
 
 
 
