--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h1>Categorila</h1>
             <p>Verificação</p>
         </section>
-        <h1>Digite confirmar para prosseguir.</h1>
+        <h1>Digite Confirmar para prosseguir.</h1>
          <h2></h2>
         <label for="inputText">Digite:</label>
         <input type="text" id="confirmationInput" placeholder="...">
@@ -114,7 +114,7 @@
             userInput = userInput.toLowerCase();
 
             // Verifica se o usuário digitou "confirmar"
-            if (userInput === "confirmar") {
+            if (userInput === "Confirmar") {
                 // Avança para a próxima página (substitua a URL pela URL desejada)
                 window.location.href = "carregamento.html";
             } else {
